// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar wrapper component should apply values from theme 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "paddingBottom": 8,
      "paddingTop": 8,
    }
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 0,
        "width": "100%",
      }
    }
    testID="RNE__Input__view-wrapper"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 0,
          "borderColor": "#86939e",
          "flexDirection": "row",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
          "width": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "marginLeft": 8,
            "marginVertical": 4,
            "paddingRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "overflow": "hidden",
            }
          }
        >
          <View
            replaceTheme={[Function]}
            updateTheme={[Function]}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "rgba(0, 0, 0, 0.54)",
                      "fontSize": 25,
                    },
                    Object {
                      "backgroundColor": "transparent",
                    },
                    Object {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
                testID="iconIcon"
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <TextInput
        allowFontScaling={true}
        editable={true}
        onBlur={[Function]}
        onCancel={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Enter search term"
        placeholderTextColor="#86939e"
        platform="android"
        rejectResponderTermination={true}
        style={
          Object {
            "color": "#242424",
            "flex": 1,
            "fontSize": 18,
            "marginLeft": 24,
            "marginRight": 8,
            "minHeight": 40,
          }
        }
        testID="searchInput"
        underlineColorAndroid="transparent"
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "height": 40,
            "justifyContent": "center",
            "marginRight": 8,
            "marginVertical": 4,
            "paddingRight": 4,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        />
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#ff190c",
          "fontSize": 12,
          "height": 0,
          "margin": 0,
          "padding": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`SearchBar wrapper component should render an Android SearchBar 1`] = `
<SearchBarAndroid
  onBlur={[Function]}
  onCancel={[Function]}
  onChangeText={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  platform="android"
/>
`;

exports[`SearchBar wrapper component should render an iOS SearchBar 1`] = `
<SearchBarIOS
  cancelButtonProps={Object {}}
  cancelButtonTitle="Cancel"
  clearIcon={
    Object {
      "name": "ios-close-circle",
    }
  }
  loadingProps={Object {}}
  onBlur={[Function]}
  onCancel={[Function]}
  onChangeText={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  platform="ios"
  searchIcon={
    Object {
      "name": "ios-search",
    }
  }
  showCancel={false}
  showLoading={false}
  value=""
/>
`;

exports[`SearchBar wrapper component should render without issues 1`] = `
<SearchBarDefault
  lightTheme={false}
  loadingProps={Object {}}
  onBlur={[Function]}
  onChangeText={[Function]}
  onClear={[Function]}
  onFocus={[Function]}
  platform="default"
  round={false}
  showLoading={false}
  value=""
/>
`;
